plugins {
	id 'babric-loom' version '0.12-SNAPSHOT'
//	id 'io.github.juuxel.loom-quiltflower' version '1.7.2'
	id 'maven-publish'
}

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

loom {
	gluedMinecraftJar()
	customMinecraftManifest.set("https://babric.github.io/manifest-polyfill/${minecraft_version}.json")
	accessWidenerPath = file("src/main/resources/forge.accesswidener")
}

repositories {
	mavenCentral()
	maven {
		name = 'Babric'
		url = 'https://maven.glass-launcher.net/babric'
		content {
			includeGroup 'babric'
			includeGroup 'org.lwjgl.lwjgl'
		}
	}
	mavenLocal()

	maven {
		name 'Modrinth'
		url 'https://api.modrinth.com/maven'
		content {
			includeGroup 'maven.modrinth'
		}
	}

	maven {
		name 'JitPack'
		url 'https://jitpack.io'
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "com.halotroop:yarn:b1.7.3-build.${project.mappings}"
	modApi "babric:fabric-loader:${project.loader_version}"

	implementation "org.slf4j:slf4j-api:1.8.0-beta4"
	implementation "org.apache.logging.log4j:log4j-slf4j18-impl:2.17.2"

	include modApi("maven.modrinth:mod-remapping-api:1.1.0")

	// Done
//	modRuntimeOnly(group: "remapped.client", name: "modloader", version: "b1.7.3")
	// Todo
//	modRuntimeOnly(group: "remapped.client", name: "modloadermp-1.7.3-unofficial", version: "v2")
//	modRuntimeOnly(group: "remapped.client", name: "minecraftforge-client", version: "1.0.7-20110907")
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

java {
	sourceCompatibility = JavaVersion.VERSION_1_8
	targetCompatibility = JavaVersion.VERSION_1_8

	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}" }
	}
	from("FORGE_LICENSE")
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	repositories {
		maven {
			name 'halotroop-blucobalt.dev'
			url 'https://repo.blucobalt.dev/repository/maven-halotroop'
		}
	}
}
